# vdm-capability-library

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.py
__wrapper__/: CMakeLists.txt
__wrapper__/serde_wrapper_cpp/: CMakeLists.txt  conanfile.py  test.cpp
__wrapper__/serde_wrapper_cpp/include/: serde_wrapper.hpp
__wrapper__/serde_wrapper_py/: __init__.py  wrapper.py
__wrapper__/serde_wrapper_rs/: Cargo.toml
__wrapper__/serde_wrapper_rs/src/: lib.rs
browser-bridge/: Makefile  README.md  manager.py  manifest.json
browser-bridge/connector/: connector.py  host.py  org.vdm.browser_bridge.chrome.json  org.vdm.browser_bridge.deepin.json  org.vdm.browser_bridge.edge.json  org.vdm.browser_bridge.firefox.json
browser-bridge/extension/: .gitignore  README.md  background.js  manifest.json  package-lock.json  package.json
browser-bridge/extension/app/: .web-extension-id  manifest.json
browser-bridge/extension/app/_locales/en/: messages.json
browser-bridge/extension/app/pages/: popup.html  transition.html
browser-bridge/extension/app/scripts/: background.js  popup.js  transition.js
browser-bridge/scripts/: crxmake.sh  install_connector.sh  install_extension.sh  uninstall_connector.sh  uninstall_extension.sh
browser-helper/: README.md
inotify-lookup/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  example.c  inotify_lookup.c  inotify_lookup.h  manifest.json
inotify-lookup/cmake/: VDMInotifyLookupConfig.cmake
inotify-lookup/inotify-hook/: .gitignore  CMakeLists.txt  Kbuild  main.c  main.h  netlink_comm.c  netlink_comm.h
inotify-lookup/inotify-hook/khook/khook/: engine.c  engine.h
inotify-lookup/inotify-lookup/: Cargo.toml
inotify-lookup/inotify-lookup-py/: Cargo.toml
inotify-lookup/inotify-lookup-py/src/: lib.rs
inotify-lookup/inotify-lookup/src/: lib.rs
inotify-lookup/src/: lib.rs
note-film/: README.md
system-tweaker/: README.md
window-helper/: README.md
x11-manager/: Cargo.toml  README.md  manifest.json
x11-manager/src/: ewmh.rs  lib.rs  xatom.rs  xmodel.rs  xwrap.rs
