[package]
name = "inotify-lookup"
version = "0.1.0"
authors = ["iamhyc <sudofree@163.com>"]
edition = "2018"

[lib]
name = "inotify_lookup"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]


# inotify-lookup = { git = "https://github.com/VDM-Maintainer-Group/vdm-capability-library/inotify-lookup", branch="main" }