[package]
name = "x11-manager"
version = "0.1.0"
authors = ["iamhyc <sudofree@163.com>"]
edition = "2021"

[lib]
name = "x11_manager"
crate-type = ["cdylib"]

[dependencies]
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
serde_wrapper = {path="../__wrapper__/serde_wrapper_rs"}

[dependencies.x11-dl]
version = "2.19"
